# fe

./: .editorconfig  .gitignore  AUTHORS  LICENSE  MANIFEST.in  README  README.md  pyproject.toml  readthedocs.yml  setup.py
doc/: gotchas.txt  index.txt  pg_python.txt
postgresql/: __init__.py  alock.py  api.py  clientoptparse.py  clientparameters.py  clientparams.py  cluster.py  configfile.py  copyman.py  dsn.py  environ.py  exceptions.py  initdb.py  installation.py  iri.py  message.py  notifyman.py  pg_config.py  pgpass.py  pgpassfile.py  project.py  python.py  string.py  strings.py  sys.py  temporal.py  tin.py  types.py  unittest.py  version.py  versionstring.py
postgresql/documentation/: __init__.py  _default_.py  admin.py  admin.txt  alock.txt  bin.py  bin.rst  bin.txt  changes-v1.0.txt  changes-v1.1.rst  changes-v1.1.txt  changes-v1.2.rst  changes-v1.3.rst  changes.py  changes.txt  clientparameters.py  clientparameters.rst  clientparameters.txt  cluster.rst  copyman.rst  copyman.txt  driver.py  driver.rst  driver.txt  driver_basics.py  driver_basics.txt  gotchas.py  gotchas.rst  gotchas.txt  index.py  index.rst  index.txt  lib.py  lib.rst  lib.txt  notifyman.rst  notifyman.txt  pg_python.py  reference.rst
postgresql/driver/: __init__.py  dbapi20.py  pg_type.py  pgapi.py  pq3.py  python.py  pythoncommand.py  test.py  tracenull.py
postgresql/encodings/: __init__.py  aliases.py  bytea.py  pbytea.py
postgresql/lib/: __init__.py  libsys.sql  sys.py
postgresql/port/: __init__.py  (+1 more)
sphinx-src/: .gitignore  Makefile  conf.py  index.rst  modules.rst
(+153 files in other folders)
